--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,5 +1,9 @@
 {
-  "python.analysis.typeCheckingMode": "basic",  // not "strict"
+  "suggest.enablePreselect": true,
+  "suggest.noselect": false,
+  "suggest.autoTrigger": "always",
+  "inlayHint.enable": false,
+  "python.analysis.typeCheckingMode": "basic",
   "python.analysis.useLibraryCodeForTypes": true,
   "python.analysis.diagnosticSeverityOverrides": {
     "reportCallIssue": "warning",
