--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -6,30 +6,14 @@ italic_font CaskaydiaCove Nerd Font Mono
 bold_italic_font CaskaydiaCove Nerd Font Mono
 font_size 11
 background #282828
-foreground #F1E8C2
-selection_background #3C3836
-selection_foreground #F1E8C2
-cursor #F1E8C2
-cursor_text_color #282828
+foreground #BDAE93
+selection_foreground #BDAE93
+cursor #BDAE93
+color7  #BDAE93
 
-color0  #282828
-color1  #FB4934
-color2  #B8BB26
-color3  #FABD2F
-color4  #83A598
-color5  #D3869B
-color6  #8EC07C
-color7  #F1E8C2
-color8  #928374
-color9  #FB4934
-color10 #B8BB26
-color11 #FABD2F
-color12 #83A598
-color13 #D3869B
-color14 #8EC07C
-color15 #F9F5D7
+active_tab_foreground #BDAE93
 
-active_tab_background #32302F
-active_tab_foreground #F1E8C2
 inactive_tab_background #282828
 inactive_tab_foreground #928374
+
+font_size 12
