changed hyprland and lock

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -4,29 +4,53 @@
 
 $mod = SUPER
 
-monitor = ,preferred,auto,1
+monitor = eDP-1,1920x1080@60.05,0x0,1.2
+
+# change cursor size
+env = HYPRCURSOR_SIZE,20
+env = XCURSOR_SIZE,20
+
+# Autostart
+exec-once = waybar
+exec-once = swww-daemon
+exec-once = zen-browser
 
 input {
   kb_layout = us
+
+  touchpad {
+    natural_scroll = true
+  }
 }
 
 general {
-  gaps_in = 5
-  gaps_out = 10
-  border_size = 2
+  gaps_in = 0
+  gaps_out = 0
+  border_size = 0
 }
 
-decoration {
-  rounding = 6
+source = /home/murt/.config/hypr/colors.conf
+
+render {
+	cm_enabled = false
 }
 
 animations {
-  enabled = 1
+  enabled = 0
 }
+
+cursor {
+  inactive_timeout = 0
+}
+
+no_donation_nag = true
+no_update_news = true
 
 # Apps
 bind = $mod, RETURN, exec, kitty
-bind = $mod, D, exec, rofi -show drun
+bind = $mod, D, exec, rofi -show drun -font "Overpass 12"
+bind = $mod, B, exec, zen-browser
+bind = $mod, C, exec, hyprpicker -a
 bind = $mod, Q, killactive
 bind = $mod, F, fullscreen
 
@@ -34,7 +58,7 @@ bind = $mod, F, fullscreen
 bind = $mod, H, movefocus, l
 bind = $mod, J, movefocus, d
 bind = $mod, K, movefocus, u
-bind = $mod, L, movefocus, r
+bind = $mod, L, exec, hyprlock
 bind = $mod, left, movefocus, l
 bind = $mod, down, movefocus, d
 bind = $mod, up, movefocus, u
