--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -4,11 +4,24 @@ background {
 
 input-field {
   size = 260, 48
-  position = 0, -100
+  position = 0, -250
   dots_center = true
   fade_on_empty = false
   outline_thickness = 2
   inner_color = rgba(0, 0, 0, 0.35)
-  outer_color = rgba(255, 255, 255, 0.2)
-  font_color = rgb(230, 230, 230)
+  outer_color = rgba(189, 174, 147, 1)
+  font_color = rgb(189, 174, 147)
+}
+
+
+# Time display
+label {
+    monitor =
+    text = cmd[update:1000] echo "<span>$(date +"%I:%M")</span>"
+    color = rgba(213, 196, 161, 1)
+    font_size = 120
+    font_family = Overpass
+    position = 0, 280
+    halign = center
+    valign = center
 }
