added hyprland to mod to alt, and added waybar cava-rendering

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -2,7 +2,7 @@
 # Minimal Hyprland config
 # Generated to restore basic navigation
 
-$mod = SUPER
+$mod = ALT
 
 monitor = eDP-1,1920x1080@60.05,0x0,1.2
 
@@ -26,6 +26,7 @@ input {
 general {
   gaps_in = 0
   gaps_out = 0
+	layout = dwindle
   border_size = 0
 }
 
@@ -53,6 +54,9 @@ bind = $mod, B, exec, zen-browser
 bind = $mod, C, exec, hyprpicker -a
 bind = $mod, Q, killactive
 bind = $mod, F, fullscreen
+
+# PrtSc / SysRq (linux keycode 99) -> Hyprland code 107
+bind = , code:107, exec, ~/.config/hypr/scripts/grim-screenshot.sh
 
 # Focus movement
 bind = $mod, H, movefocus, l
