--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -4,7 +4,9 @@ include ~/.config/theme/colors.conf
 font_family CaskaydiaCove Nerd Font Mono
 background #282828
 foreground #BDAE93
-selection_foreground #BDAE93
+selection_foreground #282828
+selection_background #BDAE93
+
 
 cursor #BDAE93
 color7  #BDAE93
