--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -5,19 +5,26 @@
 
 	"modules-left": ["group/left"],
 
-
 	"modules-center": ["group/center"],
 
 	"modules-right": ["group/right"],
 
 	"group/center": {
 		"orientation": "horizontal",
-		"modules": ["bluetooth", "clock", "custom/weather"]
+		"modules": [
+			"bluetooth", 
+			"clock", 
+			"custom/weather"
+		]
 	},
 
 	"group/left": {
 		"orientation": "horizontal",
-		"modules": ["hyprland/workspaces"]
+		"modules": [
+			"hyprland/workspaces", 
+			"mpris",
+			"custom/cava"
+		]
 	},
 	"group/right": {
 		"orientation": "horizontal",
@@ -67,12 +74,42 @@
 		"format": " {} "
 	},
 
+	"custom/cava": {
+		"exec": "~/.config/waybar/scripts/cava-rendering.sh",
+		"tail": true,
+		"format": " {} ",
+		"return-type": "text"
+	},
+
+  "mpris": {
+    "format": " {player_icon}  {dynamic} ",
+    "format-paused": " {status_icon} {dynamic} ",
+    "format-stopped": "",
+    "ignore-list": ["vesktop"],
+    "player-icons": {
+      "brave": "",
+      "default": "",
+      "spotify": "",
+      "vlc": "",
+      "mpv": ""
+    },
+    "status-icons": {
+      "paused": "",
+      "playing": "⏸"
+    },
+		"interval": 1,
+		"dynamic-order":  ["artist", "title", "position", "length"] ,
+		"album-len": 0,
+		"title-len": 20,
+    "max-length": 40,
+    "tooltip": true
+  },
+
 	"bluetooth": {
-	// "controller": "controller1", // specify the alias of the controller if there are more than 1 on the system
 	"format": "  {status}  ",
 	"format-disabled": "", // an empty format will hide the module
-	"format-connected": " {num_connections} connected",
-	"tooltip-format": "{controller_alias}\t{controller_address}",
+	"format-connected": "  {num_connections} connected  ",
+	"tooltip-format": " {controller_alias}\t{controller_address} ",
 	"tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
 	"tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
 	"on-click": "~/.config/waybar/scripts/rofi-bluetooth.sh"
