added fonts, images and better lockscreen

--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -1,27 +1,72 @@
 background {
-  path = /home/murt/Pictures/Wallpapers/rubiks-cube.png
-}
-
-input-field {
-  size = 260, 48
-  position = 0, -250
-  dots_center = true
-  fade_on_empty = false
-  outline_thickness = 2
-  inner_color = rgba(0, 0, 0, 0.35)
-  outer_color = rgba(189, 174, 147, 1)
-  font_color = rgb(189, 174, 147)
+	path = /home/murt/Pictures/Wallpapers/sky.png
 }
 
 
 # Time display
 label {
-    monitor =
-    text = cmd[update:1000] echo "<span>$(date +"%I:%M")</span>"
-    color = rgba(213, 196, 161, 1)
-    font_size = 120
-    font_family = Overpass
-    position = 0, 280
-    halign = center
-    valign = center
+	monitor =
+		text = cmd[update:1000] echo "<span>$(date +"%H:%M")</span>"
+		color = rgb(236, 73, 53) 
+# color = rgb(235, 219, 178) 
+		font_size = 100
+		font_family = 3D Isometric
+		position = 0, 80
+		halign = center
+		valign = center
 }
+
+# User
+label {
+	monitor =
+		text = Welcome back, $USER
+		color = rgb(189, 174, 147)
+		font_size = 10
+		font_family = overpass
+		position = 0, -10
+		halign = center
+		valign = center
+}
+
+# input-field
+input-field {
+	size = 260, 48
+		position = 0, -50
+		dots_center = true
+		fade_on_empty = false
+		outline_thickness = 2
+		inner_color = rgb(60, 56, 54) 
+		outer_color = rgb(236, 73, 53)
+		font_color = rgb(236, 73, 53) 
+		font_family = overpass
+		rounding = 0
+		placeholder_text = <i>. . .</i>
+		dots_rounding = 0 
+		outline_thickness = 1
+}
+
+# Week
+label {
+	monitor = 
+		text = cmd[update:18000000] echo "<b> "$(date +'Week %U')" </b>"
+		color = rgb(61, 58, 55) 
+		font_size = 24
+		position = 0, 10
+		font_family = overpass
+		halign = center
+		valign = bottom
+}
+
+
+# Date
+label {
+	monitor = 
+		text = cmd[update:18000000] echo "<b> "$(date +'%A, %-d %B %Y')" </b>"
+		color = rgb(70, 67, 61) 
+		font_size = 34
+		position = 0, 50
+		font_family = overpass
+		halign = center
+		valign = bottom
+}
+
