--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -7,6 +7,7 @@ $mod = ALT
 monitor = eDP-1,1920x1080@60.05,0x0,1.2
 
 # change cursor size
+env = XCURSOR_THEME,Simp1e-Gruvbox-Dark
 env = HYPRCURSOR_SIZE,20
 env = XCURSOR_SIZE,20
 
@@ -14,6 +15,7 @@ env = XCURSOR_SIZE,20
 exec-once = waybar
 exec-once = swww-daemon
 exec-once = zen-browser
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 input {
   kb_layout = us
@@ -24,10 +26,12 @@ input {
 }
 
 general {
-  gaps_in = 0
-  gaps_out = 0
+  gaps_in = 3
+  gaps_out = 3
 	layout = dwindle
-  border_size = 0
+  border_size = 1
+	col.inactive_border = rgba(7c6f64ee) 
+	col.active_border = rgba(ec4935ee) 
 }
 
 source = /home/murt/.config/hypr/colors.conf
@@ -36,12 +40,20 @@ render {
 	cm_enabled = false
 }
 
+decoration {
+	shadow{
+		enabled = false
+	}
+}
+
+
 animations {
   enabled = 0
 }
 
 cursor {
   inactive_timeout = 0
+	no_hardware_cursors = true
 }
 
 no_donation_nag = true
@@ -49,11 +61,16 @@ no_update_news = true
 
 # Apps
 bind = $mod, RETURN, exec, kitty
-bind = $mod, D, exec, rofi -show drun -font "Overpass 12"
+bind = $mod, E, exec, ~/.config/hypr/scripts/nerd_rofi_picker.sh
+bind = $mod, D, exec, rofi -show drun
 bind = $mod, B, exec, zen-browser
 bind = $mod, C, exec, hyprpicker -a
 bind = $mod, Q, killactive
 bind = $mod, F, fullscreen
+
+# Example volume button that allows press and hold, volume limited to 150%
+binde = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
+binde = , XF86AudioLowerVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%-
 
 # PrtSc / SysRq (linux keycode 99) -> Hyprland code 107
 bind = , code:107, exec, ~/.config/hypr/scripts/grim-screenshot.sh
