changed README, enables floating in hyprland, changed some things in nvim and waybar

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -32,6 +32,7 @@ general {
   border_size = 1
 	col.inactive_border = rgba(7c6f64ee) 
 	col.active_border = rgba(ec4935ee) 
+	resize_on_border = true
 }
 
 source = /home/murt/.config/hypr/colors.conf
@@ -46,9 +47,29 @@ decoration {
 	}
 }
 
-
 animations {
-  enabled = 0
+    enabled = 1
+    bezier = default, 0.12, 0.92, 0.08, 1.0
+    bezier = wind, 0.12, 0.92, 0.08, 1.0
+    bezier = overshot, 0.18, 0.95, 0.22, 1.03
+    bezier = liner, 1, 1, 1, 1
+
+    animation = windows, 1, 5, wind, popin 60%
+    animation = windowsIn, 1, 6, overshot, popin 60%
+    animation = windowsOut, 1, 4, overshot, popin 60%
+    animation = windowsMove, 1, 4, overshot, popin
+
+    animation = layers, 1, 4, default, popin
+
+    animation = fadeIn, 1, 0.01, default
+    animation = fadeOut, 0, 7, default
+    animation = fadeSwitch, 1, 1, default
+    animation = fadeShadow, 1, 1, default
+    animation = fadeDim, 1, 1, default
+    animation = fadeLayers, 1, 1, default
+
+    animation = workspaces, 0, 5, overshot, slidevert
+    animation = border, 1, 1, liner
 }
 
 cursor {
@@ -59,6 +80,8 @@ cursor {
 no_donation_nag = true
 no_update_news = true
 
+bindm = $mod, mouse:272, movewindow
+
 # Apps
 bind = $mod, RETURN, exec, kitty
 bind = $mod, E, exec, ~/.config/hypr/scripts/nerd_rofi_picker.sh
@@ -67,6 +90,7 @@ bind = $mod, B, exec, zen-browser
 bind = $mod, C, exec, hyprpicker -a
 bind = $mod, Q, killactive
 bind = $mod, F, fullscreen
+bind = $mod, SPACE, togglefloating
 
 # Example volume button that allows press and hold, volume limited to 150%
 binde = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
